--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
     "description": "A simple blog using Express, Pug, and SQLite",
     "main": "app.js",
     "scripts": {
-      "start": "node app.js",
-      "dev": "nodemon app.js"
+        "start": "node app.js",
+        "dev": "nodemon app.js",
+        "test": "jest"
     },
     "dependencies": {
-      "express": "^4.17.1",
-      "pug": "^3.0.2",
-      "sqlite3": "^5.0.2",
-      "sequelize": "^6.6.5"
+        "express": "^4.17.1",
+        "pug": "^3.0.2",
+        "sequelize": "^6.6.5",
+        "sqlite3": "^5.0.2"
     },
     "devDependencies": {
-      "nodemon": "^2.0.12"
+        "jest": "^29.7.0",
+        "nodemon": "^2.0.12",
+        "supertest": "^7.0.0"
     }
-  }
-  
-  
+}
